--- a/ui-v2/src/i18n/messages/es/common.json
+++ b/ui-v2/src/i18n/messages/es/common.json
@@ -1,16 +1,16 @@
 {
 	"home": "Inicio",
 	"user": "Usuarios",
-	"switchLng": "Cambiar idioma a {locale, select, de {Español} en {Inglés} other {Unknown}}",
-	"item": "Item",
+	"switchLng": "Cambiar idioma a {locale, select, de {Español} en {Inglés} other {Desconocido}}",
+	"item": "Ítem",
 	"components": "Componentes",
 	"inputs": "Entradas",
-	"selects": "Selects",
+	"selects": "Selectores",
 	"tables": "Tablas",
 	"modals": "Modales",
 	"forms": "Formularios",
 	"alerts": "Alertas",
-	"toasts": "Toasts",
+	"toasts": "Notificaciones",
 	"progress": "Progreso",
 	"typography": "Tipografía",
 	"colors": "Colores",
@@ -49,7 +49,7 @@
 	"toolTips": "Consejos",
 	"pagination": "Paginación",
 	"slider": "Deslizador",
-	"snackbars": "Snackbars",
+	"snackbars": "Notificaciones",
 	"chips": "Chips",
 	"dialogs": "Diálogos",
 	"tabs": "Pestañas",
@@ -68,13 +68,13 @@
 	"numericField": "Campo numérico",
 	"telInput": "Entrada de teléfono",
 	"searchInput": "Entrada de búsqueda",
-	"checkboxes": "Casilla de verificación",
+	"checkboxes": "Casillas de verificación",
 	"radios": "Radios",
 	"calendar": "Calendario",
-	"snackbar": "Snackbar",
+	"snackbar": "Notificación",
 	"logout": "Cerrar sesión",
 	"all": "Todos",
-	"fileSizeExceeded": "El tamaño del archivo excede el límite permitido de: {size}MB y el archivo tiene: {fileSize}MB, por favor comprime tú archivo.",
+	"fileSizeExceeded": "El tamaño del archivo excede el límite permitido de: {size}MB y el archivo tiene: {fileSize}MB, por favor comprime tu archivo.",
 	"fileNotValid": "El tipo de archivo no es permitido, por favor selecciona un archivo válido.",
 	"uploadMultipleFiles": "Subir múltiples archivos",
 	"uploadAnyFile": "Subir cualquier archivo",
@@ -101,5 +101,16 @@
 	"spanish": "Español",
 	"english": "Inglés",
 	"badge": "Insignia",
-	"toast": "Tostada"
+	"toast": "Notificación",
+	"welcome": "Bienvenido",
+	"code": "Código",
+	"verifyAccount": "Ingrese el código enviado a su correo electrónico",
+	"placeholderOtp": "Ingrese el código",
+	"resend": "Reenviar",
+	"codeIsRequired": "El código es requerido",
+	"codeInvalid": "Código inválido",
+	"didNotReceiveCode": "¿No recibiste el código?",
+	"resendCode": "Reenviar código",
+	"sessionsExpired": "Sesiones expiradas",
+	"otpSent": "Código enviado"
 }
