Agregar soporte para la verificación de cuentas mediante OTP; incluir nuevos mensajes de respuesta y optimizar la gestión de errores en la API.

--- a/ui-v2/src/i18n/messages/en/common.json
+++ b/ui-v2/src/i18n/messages/en/common.json
@@ -111,5 +111,8 @@
 	"didNotReceiveCode": "Didn't receive the code?",
 	"resendCode": "Resend code",
 	"sessionExpired": "Session Expired",
-	"otpSent": "Code sent"
+	"otpSent": "Code sent",
+	"codeMustBe6Digits": "Code must be 6 digits",
+	"codeInvalid": "Invalid code",
+	"accountVerified": "Account verified"
 }
